fix: toc active flicker

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -1065,13 +1065,14 @@
     --tw-prose-invert-td-borders: var(--clr-neutral-700);
     & a {
       text-decoration: none;
-      text-decoration-color: var(--clr-primary-300);
       font-weight: 500;
+      &.active {
+        text-decoration-line: underline;
+        text-decoration-thickness: 3px;
+        text-underline-offset: 4px;
+      }
       & code {
         color: var(--tw-prose-code);
-      }
-      &.active {
-        text-decoration-color: var(--clr-primary-600);
       }
     }
     & hr {
@@ -1731,7 +1732,9 @@
       color: var(--clr-primary-400);
       font-weight: 500;
       &.active {
-        text-decoration-color: var(--clr-primary-400);
+        text-decoration-line: underline;
+        text-decoration-thickness: 3px;
+        text-underline-offset: 4px;
       }
     }
     & kbd {
@@ -3336,7 +3339,9 @@
         color: var(--clr-primary-400);
         font-weight: 500;
         &.active {
-          text-decoration-color: var(--clr-primary-400);
+          text-decoration-line: underline;
+          text-decoration-thickness: 3px;
+          text-underline-offset: 4px;
         }
       }
       & kbd {
@@ -4593,6 +4598,10 @@ button, [role="button"] {
   &:where(.dark, .dark *) {
     color: var(--color-neutral-300);
   }
+  text-decoration-color: var(--clr-primary-600);
+  .dark & {
+    text-decoration-color: var(--clr-primary-400);
+  }
 }
 .toc ul > li {
   &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
@@ -4830,7 +4839,7 @@ body:has(#mobile-menu-toggle:checked) {
   opacity: 1;
   visibility: visible;
 }
-.active {
+.active-header {
   text-decoration-line: underline;
   text-decoration-thickness: 3px;
   text-underline-offset: 4px;
